--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>Crossfit Life</title>
+        <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-
+        <h1>What is CrossFit?</h1>
+        <h4>Cardiovascular and Respiratory endurance & Stamina</h4>
+        <img src="running.gif" alt="running">
+        <h4>Strength & Power</h4>
+        <h4>Flexibility & Agility</h4>
+        <h4>Speed & Coordination</h4>
+        <h4>Balance & Accuracy</h4>
     </body>
 </html>
