--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <body>
         <h1>What is CrossFit?</h1>
         <h4>Cardiovascular and Respiratory endurance & Stamina</h4>
-        <img src="running.gif" alt="running">
+        <img src="running.gif" width="345" height="345" alt="running">
         <h4>Strength & Power</h4>
+        <img src="strength.gif" width="345" height="345" alt="strength">
         <h4>Flexibility & Agility</h4>
+        <img src="flexibilty.gif" width="345" height="345" alt="flexibility">
         <h4>Speed & Coordination</h4>
+        <img src="speed.gif" width="345" height="345" alt="speed">
         <h4>Balance & Accuracy</h4>
+        <img src="handstand.gif" width="345" height="345" alt="handstand">
     </body>
 </html>
