--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-        <h1>What is CrossFit?</h1>
-        <h4>Cardiovascular and Respiratory endurance & Stamina</h4>
-        <img src="running.gif" width="345" height="345" alt="running">
-        <h4>Strength & Power</h4>
-        <img src="strength.gif" width="345" height="345" alt="strength">
-        <h4>Flexibility & Agility</h4>
-        <img src="flexibilty.gif" width="345" height="345" alt="flexibility">
-        <h4>Speed & Coordination</h4>
-        <img src="speed.gif" width="345" height="345" alt="speed">
-        <h4>Balance & Accuracy</h4>
-        <img src="handstand.gif" width="345" height="345" alt="handstand">
+        <table>
+            <tr>
+                <th></th>
+                <th><h1>What is CrossFit?</h1></th>
+                <th></th>
+            </tr>
+                <tr>
+                <th><h2>Cardiovascular</h2></th>
+                <th><h2>Stamina</h2></th>
+                <th><h2>Strength & Power</h2></th>
+                </tr>
+                <tr>
+                    <td><img src="running.gif" width="345" height="345" alt="running"></td>
+                    <td><img src="stamina.gif" width="345" height="345" alt="stamina"></td>
+                    <td><img src="strength.gif" width="345" height="345" alt="strength"></td>
+                </tr>
+                <tr>
+                    <th><h2>Flexibility & Agility</h2></th>
+                    <th><h2>Speed & Coordination</h2></th>
+                    <th><h2>Balance & Accuracy</h2></th>
+                </tr>
+                <tr>
+                    <td><img src="flexibilty.gif" width="345" height="345" alt="flexibility"></td>
+                    <td><img src="speed.gif" width="345" height="345" alt="speed"></td>
+                    <td><img src="handstand.gif" width="345" height="345" alt="handstand"></td>
+                </tr>
+        </table>
     </body>
 </html>
