--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html>
     <head>
         <title>Crossfit Life</title>
-        <link rel="stylesheet" href="/css/master.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <table>
-            <tr>
-                <th></th>
-                <th><h1>What is CrossFit?</h1></th>
-                <th></th>
-            </tr>
+            <h1>What is CrossFit?</h1>
                 <tr>
-                <th><h2>Cardiovascular</h2></th>
-                <th><h2>Stamina</h2></th>
-                <th><h2>Strength & Power</h2></th>
+                    <th><h2>Cardiovascular</h2></th>
+                    <th><h2>Stamina</h2></th>
+                    <th><h2>Strength & Power</h2></th>
                 </tr>
                 <tr>
                     <td><img src="running.gif" width="345" height="345" alt="running"></td>
