--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Crossfit Life</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="layout.css">
     </head>
     <body>
-        <table>
-            <h1>What is CrossFit?</h1>
-                <tr>
-                    <th><h2>Cardiovascular</h2></th>
-                    <th><h2>Stamina</h2></th>
-                    <th><h2>Strength & Power</h2></th>
-                </tr>
-                <tr>
-                    <td><img src="running.gif" width="345" height="345" alt="running"></td>
-                    <td><img src="stamina.gif" width="345" height="345" alt="stamina"></td>
-                    <td><img src="strength.gif" width="345" height="345" alt="strength"></td>
-                </tr>
-                <tr>
-                    <th><h2>Flexibility & Agility</h2></th>
-                    <th><h2>Speed & Coordination</h2></th>
-                    <th><h2>Balance & Accuracy</h2></th>
-                </tr>
-                <tr>
-                    <td><img src="flexibilty.gif" width="345" height="345" alt="flexibility"></td>
-                    <td><img src="speed.gif" width="345" height="345" alt="speed"></td>
-                    <td><img src="handstand.gif" width="345" height="345" alt="handstand"></td>
-                </tr>
-        </table>
+        <div id="container">
+            <div id="header">
+                <h1>What is CrossFit?</h1>
+            </div>
+            <div id="panel1">
+                <h5>
+                    <a href=index.html>CrossFit Home</a></br></br>
+                    <a href=cardio.html>Cardio & Stamina</a></br>
+                    <a href=strength.html>Strength & Power</a></br>
+                    <a href=flexibility.html>Flexibility & Agility</a></br>
+                    <a href=speed.html>Speed & Coordination</a></br>
+                    <a href=balance.html>Balance & Accuracy</a></br>
+                </h5>
+            </div>
+            <div id="panel2">
+                <h5>How will I get fitter with CrossFit?</h5>
+				<p>CrossFit improves general physical preparedness (GPP). We have designed our program to elicit as broad an adaptational response as possible. CrossFit is not a specialized fitness program but a deliberate attempt to optimize physical competence in each of 10 fitness domains: cardiovascular/respiratory endurance, stamina, strength, flexibility, power, speed, coordination, agility, balance and accuracy.</p>
+            </div>
+            <div id="body">
+                <h3>CONSTANT VARIATION</h3>
+                <p>Different every day, CrossFit workouts are tailored to the individual.</p>
+
+                <h3>FUNCTIONAL MOVEMENTS</h3>
+                <p>CrossFit uses safe, effective, and efficient movements similar to those you use every day in life.</p>
+
+                <h3>HIGH INTENSITY</h3>
+                <p>In CrossFit workouts, intensity levels are adjusted to challenge the individual and safely improve fitness.</p>
+            </div>
+            <div id="footer">
+                <h6>My Hobby Website is Copyright 2022</h6>
+            </div>
+        </div>
     </body>
 </html>
