Final before submision

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div id="panel2">
                 <h5>How will I get fitter with CrossFit?</h5>
-				<p>CrossFit improves general physical preparedness (GPP). We have designed our program to elicit as broad an adaptational response as possible. CrossFit is not a specialized fitness program but a deliberate attempt to optimize physical competence in each of 10 fitness domains: cardiovascular/respiratory endurance, stamina, strength, flexibility, power, speed, coordination, agility, balance and accuracy.</p>
+				<p>CrossFit is not a specialized fitness program but a deliberate attempt to optimize physical competence in each of 10 fitness domains: cardiovascular/respiratory endurance, stamina, strength, flexibility, power, speed, coordination, agility, balance and accuracy.</p>
             </div>
             <div id="body">
                 <h3>CONSTANT VARIATION</h3>
